<resources>
    <string name="app_name">Beacon</string>
    <string name="scan_interval">Enter scan interval here:</string>
    <string name="input">Input   </string>
    <string name="start_scan">START SCAN</string>
    <string name="stop_scan">STOP SCAN</string>
    <string name="add_beacons_text">Add scanned beacons to collection:</string>
    <string name="add_beacons_button">ADD BEACONS</string>
    <string name="scanned_beacons_text">Scanned beacons:</string>
    <string name="uuid">uuid</string>
    <string name="major">major</string>
    <string name="minor">minor</string>
    <string name="title">"Beacon Simulation"</string>
</resources>
