<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.beacon.MainActivity">

        <TextView
            android:id="@+id/scan_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_interval" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/input"
            android:inputType="number"
            android:layout_below="@id/scan_interval"
            android:hint="@string/input"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="16dp"
            android:id="@+id/buttons_linear_layout">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/start_scan"
                android:background="@android:color/holo_orange_dark"
                android:textStyle="bold"
                android:hint="@string/start_scan"
                android:layout_marginEnd="8dp"
                android:onClick="startServiceByButtonClick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/stop_scan"
                android:background="@android:color/holo_orange_dark"
                android:textStyle="bold"
                android:hint="@string/stop_scan"
                android:layout_marginStart="8dp"
                android:onClick="stopServiceByButtonClick"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tester"
            android:layout_below="@id/buttons_linear_layout"/>

    </RelativeLayout>

</ScrollView>