<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_add_beacons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.beacon.AddBeaconsActivity">

        <TextView
            android:id="@+id/add_beacons_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_beacons_text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_beacons_text"
            android:id="@+id/add_beacons_button"
            android:background="@android:color/holo_orange_dark"
            android:textStyle="bold"
            android:hint="@string/add_beacons_button"
            android:onClick="addBeaconsByButtonClick"
            android:layout_centerVertical="false"
            android:layout_centerInParent="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/scanned_beacons_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_beacons_button"
            android:text="@string/scanned_beacons_text"
            android:layout_marginTop="16dp" />

        <TableLayout
            android:id="@+id/scanned_beacons_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/scanned_beacons_text"
            android:layout_marginTop="16dp"/>

    </RelativeLayout>

</ScrollView>